--- a/maven-practice-app/pom.xml
+++ b/maven-practice-app/pom.xml
@@ -6,7 +6,7 @@
         <groupId>lt.sitnikov.maven</groupId>
         <artifactId>maven-practice-parent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-        <!--<relativePath>../pom.xml</relativePath>-->
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>maven-practice-app</artifactId>
